Add tests for signatures